# ninja_project_template

./: .dockerignore  .gitignore  Makefile  README.md  alembic.ini  copier.yml  docker-compose.yml  hexproject.yaml  mypy.ini  pyproject.toml
docs/: SIGNUP_API.md
env/: bastion.env  default.env  dev.env  docker.env  local.env
infra/tf/aws/environment/: main.tf  output.tf  variables.tf
infra/tf/aws/shared/: main.tf  variables.tf
src/: config.py  conftest.py  db.sqlite3
src/adaptor/storage/: adaptor.py
src/apps/core/: models.py  tasks.py
src/apps/login/: admin.py
src/apps/login/controllers/: __init__.py  login.py
src/apps/login/migrations/: 0001_initial.py
src/apps/login/models/: __init__.py  email_verification.py  password_reset.py
src/apps/login/tests/: test_models.py  test_password_reset.py  test_signup.py
src/apps/{{project_slug}}/: admin.py  api.py  apps.py
src/apps/{{project_slug}}/controllers/: __init__.py  {{project_slug}}.py
src/apps/{{project_slug}}/migrations/: 0001_initial.py
src/apps/{{project_slug}}/models/: __init__.py  {{project_slug}}.py
src/main/: api.py  asgi.py  celery.py  settings.py  urls.py  wsgi.py
